--- a/src/pages/destinationDetailsPage/DestinationDetailsPage.scss
+++ b/src/pages/destinationDetailsPage/DestinationDetailsPage.scss
@@ -10,6 +10,7 @@
 			align-items: flex-end;
 			bottom: -270px;
 			left: 80px;
+			width: 1359px;
 
 			.destinationInfoCardWrapper {
 				position: relative;
@@ -103,6 +104,11 @@
 						}
 					}
 				}
+			}
+		}
+		.sectionThree {
+			.yellowSquare {
+				width: 100vw;
 			}
 		}
 	}
